--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <p><strong>Once seen, this cannot be unlearned.</strong><br />
   If you act after this, you carry the weight of your choice.</p>
 
-  <p><em>Semantic Clause v2.0.0 – Protected by ethics.</em></p>
+  <p><em>Semantic Clause v2.0.0 – Protected by Human Flag.</em></p>
 
   <p><a href="hf_moral_fragment.json" style="color:white">JSON</a> |
      <a href="hf_moral_fragment.rdf" style="color:white">RDF</a> |
