--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
      <a href="hf_moral_fragment.js" style="color:white">JS</a></p>
 
   <footer style="margin-top:40px; font-size:0.9em">
-    Contact: ethics@humanflag.org<br />
+    Contact: Contact: humanflag@email.com
+<br />
     Source: <a href="https://humanflag.org" style="color:white">https://humanflag.org</a>
   </footer>
 </body>
